2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Rewrite parseBraces() so that nested braces are properly handled. Nope,
	this is not nice-to-read code. Definitely not.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add /graph drawing/register node coordinate key. This key allows
	coordinate options like at={(x,y)} to be specified for nodes.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add TODOs for the spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Nothing important.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a few notes about the spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add cooling function. Enforce small distance for nodes at same location.
	Also default to 500 iterations max.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add missing component packing file.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Initial work on a serious spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a variety of vector math functions to the Vector class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Allow algorithms to have spaces and - in their name.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- More options, mostly undocumented.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Further work on the documentation.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Improve the orientation examples.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Move docs to graphdrawing.standard. Add more options. Most notably, this
	commit (hopefully) finishes the implementation of the /tikz/orientation
	and /tikz/orientation' options.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add experimental layout style. Document the orientation option.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add utility for adjusting the orientation of a graph. Update vector
	class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>
