@@ -21,6 +21,7 @@
 \end{tikzlibrary}
 
 \subsection{Orientation of Graph Drawings}
+\label{subsection-library-graphdrawing-standard-orientation}
 
 The drawing computed for a graph may be pleasing in general but some
 algorithms like the |spring| algorithm show the tendency to generate
@@ -45,41 +46,41 @@ a relatively simple way using the options described here.
   axis node}:
   \begin{codeexample}[]
 \tikz \graph [spring electrical layout] { a -- b -- c -- a };
-\tikz \graph [spring electrical layout,orientation=(a):(c)] { a -- b -- c -- a };
-\tikz \graph [spring electrical layout,orientation=(c):(a)] { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):(b)] { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(b):(a)] { a -- b -- c -- a };
 \tikz \graph [spring electrical layout,orientation=(1):(4)] { subgraph K_n[n=5] };
 \tikz \graph [spring electrical layout,orientation=(4):(1)] { subgraph K_n[n=5] };
   \end{codeexample}
   The angle to the $x$ axis can be changed easily by using the
   |(|\meta{first axis node}|):|\meta{angle}|:(|\meta{second axis node}|)|
-  syntax to define an axis with a specific angle.
+  syntax to define an axis with a specific angle:
   \begin{codeexample}[]
-\tikz \graph [spring layout,orientation=(a):0:(c)]   { a -- b -- c -- a };
-\tikz \graph [spring layout,orientation=(a):45:(c)]  { a -- b -- c -- a };
-\tikz \graph [spring layout,orientation=(a):90:(c)]  { a -- b -- c -- a };
-\tikz \graph [spring layout,orientation=(a):120:(c)] { a -- b -- c -- a };
-\tikz \graph [spring layout,orientation=(a):-45:(c)] { a -- b -- c -- a };
-\tikz \graph [spring layout,orientation=(a):-90:(c)] { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):90:(b)]  { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):45:(b)]  { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):0:(b)]   { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):-45:(b)] { a -- b -- c -- a };
+\tikz \graph [spring electrical layout,orientation=(a):-90:(b)] { a -- b -- c -- a };
   \end{codeexample}
 \end{key}
 
-\begin{key}{/tikz/orientation'=\meta{colon-separated list}}
-  Does the same as |orientation| except that nodes are flipped over the
-  principal axis.
+\begin{key}{/tikz/orientation'=|(|\meta{first axis node}|)|\opt{|:|\meta{angle}}|:(|\meta{second axis-node}|)|}
+  Does the same as |orientation| except that the nodes are flipped over 
+  the principal axis.
   \begin{codeexample}[]
 \tikz \graph [spring layout,orientation=(a):(b)]  { a -- b -- c -- a };
 \tikz \graph [spring layout,orientation'=(a):(b)] { a -- b -- c -- a };
   \end{codeexample}
 \end{key}
 
-\begin{key}{/tikz/desired at=\marg{coordinate}}
-  Defines the desired position for a node. In a postprocessing step, the
-  |graphdrawing| library will attempt to move the entire graph so that
-  the first node with a |desired at| option is moved to its desired 
-  location.
-  \begin{codeexample}[]
-  \end{codeexample}
-\end{key}
+%\begin{key}{/tikz/desired at=\marg{coordinate}}
+%  Defines the desired position for a node. In a postprocessing step, the
+%  |graphdrawing| library will attempt to move the entire graph so that
+%  the first node with a |desired at| option is moved to its desired 
+%  location.
+%  \begin{codeexample}[]
+%% TODO
+%  \end{codeexample}
+%\end{key}
 
 %\subsection{Packing of Connected Components}
 %
@@ -182,7 +183,7 @@ node and \emph{edge options} that can be specified for each edge.
   \end{codeexample}
 \end{key}
 
-\begin{key}{/tikz/maximum iterations=\meta{number} (initially -1)}
+\begin{key}{/tikz/maximum iterations=\meta{number} (initially 500)}
   Depending on the characteristics of the input graph and the parameters
   chosen for the spring or spring-electrical algorithm, minimizing the
   system energy may require many iterations. In rare cases and only if
@@ -312,15 +313,26 @@ node and \emph{edge options} that can be specified for each edge.
   \end{codeexample}
 \end{key}
 
-\begin{key}{/tikz/nail at=\meta{coordinate}}
+\begin{key}{/tikz/at=\meta{coordinate}}
   Nails the node down at the specified \meta{coordinate}. It will not
   move from there despite the repulsive and attractive forces in the
-  system. The \meta{coordinate} does not have to be fully specified. 
-  \begin{codeexample}[] 
-% two examples with same graph
-% nail down two nodes at different coordinates
+  system. Note that, while sometimes generating a similar effect, using
+  |at| is very different from altering the orientation of a graph
+  drawing (see section~\ref{subsection-library-graphdrawing-standard-orientation}).
+  Also, if an orientation is specified, it is given priority over
+  the |at| option in that nodes are first fixated at their |at|
+  coordinates but are later moved in order to satisfy the orientation 
+  desired by the user.
+  \begin{codeexample}[width=6.0cm]
+\tikz \graph [spring electrical layout] {
+  1 -- 2 -- 3 -- 4 -- 2
+};
+\tikz \graph [spring electrical layout] {
+  1 [at={(0,0)}] -- 2 [at={(0,2)}] -- 3 -- 4 -- 2
+};
   \end{codeexample}
 \end{key}
+
 
 % TODO what about node groups / clusters? This works via color classes
 % but how do we define their layouts (cluster, line, circle)?
@@ -593,14 +605,12 @@ node and \emph{edge options} that can be specified for each edge.
 };
 \end{codeexample}
 \begin{codeexample}[]
-\begin{tikzpicture}
-  \graph [spring electrical layout,
+\tikz \graph [spring electrical layout,
               maximum iterations=500,
               natural spring dimension=40pt,
               orientation=(1):(2)] {
   subgraph K_n[n=4]
-  };
-\end{tikzpicture}
+};
 \end{codeexample}
 
 %% TODO
