@@ -55,11 +55,12 @@
   graph drawing/register key=random seed,
   graph drawing/register key=coarsening,
   graph drawing/register key=minimum energy delta,
+  graph drawing/register node coordinate key=at,
   %
   % Node options
   %
   graph drawing/register node key=electric charge,
-  graph drawing/register node key=nail at, % TODO: this should be a coordinate key
+  graph drawing/register node key=nail at,% TODO: this should be a coordinate key
   %
   % Edge options
   %
