@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add at option to the spring-electrical algorithm to fixate nodes.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Rewrite parseBraces() so that nested braces are properly handled. Nope,
 	this is not nice-to-read code. Definitely not.
 
